# flash_premier_pas

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  TODO.txt  app.py  hello.py  make.bat  pylintrc  pyproject.toml  requirements.txt  setup.cfg  test_hello.py
.github/workflows/: analyse_statique.yml  package.yml  pylint.yml  pytest.yml  sphinx.yml
project/: __init__.py  routes.py
project/models/: __init__.py
project/tests/: test_routes.py
project/tools/: exemple_db.py  init_db.py
projet/: __init__.py  routes.py
projet/doc/: conf.py  index.rst
projet/models/: __init__.py
projet/tests/: routes_test.py  test_routes.py
projet/tools/: create_pyproject_toml.py  exemple_db.py  init_db.py
source/: conf.py
static/css/: style.css
templates/: about.html  base.html  create.html  edit.html  index.html  todo.html
tools/: database_utils.py  exemple_db.py  init_db.py
