[metadata]
name = flask-example-pkg-spitant
version = 0.0.1
author = SPITANT
author_email = author@example.com
description = A small example package
long_description = file: README.md
license_files = LICENSE
long_description_content_type = text/markdown
url = https://github.com/spitant/flask_premier_pas/
include_package_data=True
project_urls =
    Bug Tracker = https://github.com/spitant/flask_premier_pas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = projet
packages = find:
python_requires = >=3.6

[options.packages.find]
where = projet
exclude =
    venv